# femtozip

./: .gitignore  LICENSE  README.md  TODO
cpp/: Makefile.am  Makefile.in  configure  configure.ac
cpp/cpp-datagen/: .project
cpp/cpp-datagen/src/: Makefile.am  Makefile.in  main.cpp
cpp/cpp-femtozip/: .cproject  .project
cpp/cpp-femtozip/src/: BitInput.h  BitOutput.h  CStringDocumentList.cpp  CStringDocumentList.h  Codeword.cpp  Codeword.h  CompressionModel.cpp  CompressionModel.h  DecodeTable.cpp  DecodeTable.h  DictionaryOptimizer.cpp  DictionaryOptimizer.h  DocumentList.cpp  DocumentList.h  FileDocumentList.cpp  FileDocumentList.h  FrequencyHuffmanModel.cpp  FrequencyHuffmanModel.h  GZipCompressionModel.cpp  GZipCompressionModel.h  GZipDictionaryCompressionModel.cpp  GZipDictionaryCompressionModel.h  HuffmanDecoder.cpp  HuffmanDecoder.h  HuffmanEncoder.cpp  HuffmanEncoder.h  HuffmanModel.h  Makefile.am  Makefile.in  NoCopyReadOnlyStreamBuf.h  OffsetNibbleHuffmanCompressionModel.cpp  OffsetNibbleHuffmanCompressionModel.h  OffsetNibbleHuffmanModel.cpp  OffsetNibbleHuffmanModel.h  OptimizingCompressionModel.cpp  OptimizingCompressionModel.h  Prefix.cpp  Prefix.h  PrefixHash.cpp  PrefixHash.h  (+10 more)
cpp/cpp-tests/: .cproject  .project
cpp/cpp-tests/src/: Makefile.am  Makefile.in  cfemtoziptools.cpp  femtoziptest.cpp
cpp/femtozip-cpp/: .cproject  .project  BitOutput.h  CStringDocumentList.h  DictionaryOptimizer.h  FileDocumentList.cpp  FrequencyHuffmanModel.cpp  HuffmanDecoder.cpp  HuffmanEncoder.h  OffsetNibbleHuffmanModel.cpp  OffsetNibbleHuffmanModel.h  Prefix.h  VerboseStringConsumer.h
cpp/fzdatagen/: .cproject  .project
cpp/fzdatagen/src/: Makefile.am  Makefile.in  main.cpp
cpp/fzip/: .cproject  .project
cpp/fzip/src/: Makefile.am  Makefile.in  fzip.cpp
cpp/fztests/: .cproject  .project
cpp/fztests/src/: Makefile.am  Makefile.in  example.c  fztests.cpp
cpp/libfz/: .cproject  .project
cpp/libfz/src/: BitInput.h  BitOutput.h  CStringDocumentList.cpp  CStringDocumentList.h  Codeword.h  CompressionModel.cpp  CompressionModel.h  DataIO.cpp  DataIO.h  DecodeTable.cpp  DecodeTable.h  DictionaryOptimizer.cpp  DictionaryOptimizer.h  FemtoZipCompressionModel.cpp  FemtoZipCompressionModel.h  FemtoZipHuffmanModel.h  FileUtil.cpp  FileUtil.h  FrequencyHuffmanModel.cpp  GZipCompressionModel.cpp  HuffmanDecoder.cpp  (+28 more)
cpp/tests-cpp/: .cproject  .project
(+870 files in other folders)
