AC_PREREQ(2.61)
AC_INIT([femtozip], 1.0, [nomail@femtozip.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([cpp-femtozip/src/CompressionModel.cpp])
AC_CONFIG_HEADERS([config.h])

AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler ...

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 cpp-femtozip/src/Makefile
                 cpp-datagen/src/Makefile
                 cpp-tests/src/Makefile
                 fzip/src/Makefile])

AC_OUTPUT
