lib_LTLIBRARIES = libfzip.la
libfzip_la_SOURCES = BitInput.h BitOutput.h CStringDocumentList.h Codeword.h CompressionModel.h DataIO.h DecodeTable.h DictionaryOptimizer.h DocumentList.h FileDocumentList.h FileUtil.h FrequencyHuffmanModel.h GZipCompressionModel.h GZipDictionaryCompressionModel.h HuffmanDecoder.h HuffmanEncoder.h HuffmanModel.h NoCopyReadOnlyStreamBuf.h FemtoZipCompressionModel.h FemtoZipHuffmanModel.h PrefixHash.h PureHuffmanCompressionModel.h Substring.h SubstringPacker.h SubstringUnpacker.h VerboseStringConsumer.h sarray.h CStringDocumentList.cpp Codeword.cpp CompressionModel.cpp DataIO.cpp DecodeTable.cpp DictionaryOptimizer.cpp DocumentList.cpp FileDocumentList.cpp FileUtil.cpp FrequencyHuffmanModel.cpp GZipCompressionModel.cpp GZipDictionaryCompressionModel.cpp HuffmanDecoder.cpp HuffmanEncoder.cpp FemtoZipCompressionModel.cpp PrefixHash.cpp PureHuffmanCompressionModel.cpp Substring.cpp SubstringPacker.cpp SubstringUnpacker.cpp VerboseStringConsumer.cpp lcp.c sarray.c femtozip.h femtozip.cpp

include_HEADERS = femtozip.h 


